@@ -10,7 +10,7 @@ pref("extensions.firegpg.gpg_path", "");
 pref("extensions.firegpg.specify_gpg_path", false);
 pref("extensions.firegpg.show_website", true);
 pref("extensions.firegpg.result_always_in_new_window", false);
-pref("extensions.firegpg.no_gpg_agent", false);
+pref("extensions.firegpg.use_gpg_agent", false);
 pref("extensions.firegpg.default_memory", true);
 pref("browser.preferences.animateFadeIn", false);
 pref("browser.preferences.instantApply", false);
